--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ a.skip:focus{
   #stars{
       max-height: 16px;
   }
+  
+  .header-links{
+      display: none;
+  }
 
 /* about container */
 #about{
@@ -76,7 +80,7 @@ a.skip:focus{
     justify-content: center;
     align-items: center;
     grid-gap:  15px;
-    margin: 15% auto;
+    margin: 50px auto;
 }
 
 h1{
@@ -121,7 +125,7 @@ h2{
 #prev-links{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 100px 100px;
+    grid-template-rows: 80px 80px;
     justify-content: center;
 }
 
@@ -131,6 +135,8 @@ h2{
     padding: 10px;
     margin: 5px;
     text-align: center;
+    font-size: 0.8em;
+    align-self: center;
 }
 
 .prev-item a{
@@ -173,7 +179,7 @@ h2{
     margin-bottom: 100px;
 }
 
-.project-container .description, .project-container h2{
+.description, .project-container h2{
     grid-column: 1 / -1;
 }
 
@@ -183,17 +189,50 @@ h2{
 
 /* specific projects */
 #tmd-proj{
-    grid-template-columns: repeat(1fr, 5);
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto auto;
+}
+
+#tmd-proj .description{
+    grid-column: 1 / -1;
 }
 
 #tmd-proj img{
     grid-column: span 1;
 }
 
-
 /* desktop/table view */
 @media screen and (min-width: 800px){
+    /* hide and reveal  header stuff */
     .topnav{
         display: none;
+    }
+    
+    .header-links{
+        display: inline;
+    }
+
+    header{
+        background: #AABFB8;
+        position: sticky;
+        position: -webkit-sticky;
+        top: 0px; 
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-self: flex-end;
+        padding: 10px 20px;
+        color: #43434f;  
+    }
+
+    header a, header a:hover, header a:visited, h1 a{
+        text-decoration: none;
+        -webkit-text-decoration: none;
+        color: hsl(240, 8%, 29%);
+    }
+
+    #stars{
+        max-height: 30px;
     }
   }
