--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ h1{
     text-align: center;
 }
 
-#tagline{
+.tagline{
     color: rgb(139, 139, 139);
     text-transform: lowercase;
     text-align: center;
@@ -199,6 +199,15 @@ h2{
 
 #tmd-proj img{
     grid-column: span 1;
+}
+
+#twitter-proj{
+    grid-template-rows: auto auto 400px;
+}
+
+#twitter-iframe{
+    width: 100%;
+    height: 100%;
 }
 
 /* desktop/table view */
