--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
+/* to do 
+-- drawings for landing page
+-- drawing of database schema
+*/
+
+
+
 /* body */
 body{
     font-family: 'Roboto', sans-serif;
 }
+
+/* Selection Color */
+::selection {
+    background: #c3c6e6; /* WebKit/Blink Browsers */
+  }
+::-moz-selection {
+    background: #c3c6e6; /* Gecko Browsers */
+  }
 
 /* skip to content */
 a.skip{
@@ -37,7 +52,7 @@ a.skip:focus{
   /* Style navigation menu links */
   .topnav a {
     color: rgb(0, 0, 0);
-    background-color: #79b19e;
+    background-color: #adcab8;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
@@ -46,7 +61,7 @@ a.skip:focus{
   
   /* Style the hamburger menu */
   .topnav a.icon {
-    background:  #79b19e;
+    background:  #b5c6b4;
     display: block;
     position: absolute;
     right: 0;
@@ -55,13 +70,13 @@ a.skip:focus{
   
   /* Add a grey background color on mouse-over */
   .topnav a:hover {
-    background-color: #fff;
+    background-color: rgb(203, 211, 211);
     color: black;
   }
   
   /* Style the active link (or home/logo) */
   .active {
-    background-color: #fff;
+    background-color: rgb(203, 211, 211);
     color: #333;
   }
 
@@ -89,7 +104,7 @@ h1{
     font-family: "Raleway", sans-serif;
     font-size: 1.9em;
     text-transform: uppercase;
-    text-decoration: 3px solid underline #79b19e;
+    text-decoration: 3px solid underline #b5c6b4;
     text-align: center;
 }
 
@@ -101,7 +116,7 @@ h1{
 
 #landing-img{
     /* border-radius: 50%; */
-    border: 8px solid #79b19e; 
+    border: 8px solid #b5c6b4; 
     justify-self: center;
     max-height: 300px;
 }
@@ -118,20 +133,20 @@ h2{
 #prev{
     font-size: 1.5em;
     margin-top: 50px;
-    text-decoration: 3px solid underline #79b19e;
+    text-decoration: 3px solid underline #b5c6b4;
     font-family: "Raleway", sans-serif;
 }
 
 #prev-links{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 80px 80px;
+    grid-template-rows: auto auto auto;
     justify-content: center;
 }
 
 .prev-item{
     grid-column: 1 / span 1;
-    background-color: #79b19e;
+    background-color: #b5c6b4;
     padding: 10px;
     margin: 5px;
     text-align: center;
@@ -150,18 +165,23 @@ h2{
     background-color: lightblue;
 }
 
-#tmd{
+#covid{
     grid-column: 2 / 3;
+    background-color: yellowgreen;
+}
+
+#tmd{
+    grid-column: 1 / 2;
     background-color: lightsalmon;
 }
 
 #bbd{
-    grid-column: 1 / 2;
+    grid-column: 2 / 3;
     background-color: mediumturquoise;
 }
 
 #twitter{
-    grid-column: 2 / 3;
+    grid-column: 1 / -1;
     background-color: plum;
 }
 
@@ -188,6 +208,15 @@ h2{
 }
 
 /* specific projects */
+#covid-proj{
+    grid-template-columns: auto auto;
+}
+
+.covid-span{
+    grid-column: 1  / -1;
+}
+
+
 #tmd-proj{
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto auto auto;
@@ -209,6 +238,62 @@ h2{
     width: 100%;
     height: 100%;
 }
+
+/* contact page */
+.contact-header{
+    margin-top: 50px;
+    margin-bottom: -30px;
+    font-size: 1.5em;
+}
+
+.form-box{
+    width: inherit;
+    height: 100%;
+    margin: 50px;
+    align-self: center;
+}
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc; 
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 100%;
+    background-color: #2b6e8d;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 8px;
+    text-transform: uppercase;
+    /* fixing weird styling in safarai */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #148dc5;
+  }
+
+  #additional-contact{
+      margin-top: -40px;
+      font-size: 0.85em;
+  }
+
+  #additional-contact p{
+      margin-top: 0px;
+  }
+
+  #message{
+      height: 80px;
+  }
 
 /* desktop/table view */
 @media screen and (min-width: 800px){
